--- a/style.css
+++ b/style.css
@@ -26,20 +26,22 @@ body {
   user-select: none;
 }
 #cursor {
-  height: 7.5vw;
-  width: 7.5vw;
+  height: 5vw;
+  width: 5vw;
   background-color: #ff5f38;
   border-radius: 50%;
   position: fixed;
   z-index: 9;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   transform: translate(-50%, -50%);
+  
 }
 #cursor h5 {
-  font-size: 1.15vw;
-  font-weight: 500;
+  font-size: 1vw;
+  font-weight: bold;
 }
 #page1 video {
   height: 100%;
@@ -91,12 +93,12 @@ nav h4 {
   border: 1px solid #0000003c;
   border-radius: 50px;
   font-weight: 500;
-  color: #000000bb;
+  color: black;
   transition: all ease 0.4s;
   position: relative;
-  font-size: 18px;
+  font-size: 1.7vw;
   overflow: hidden;
-  background-color: beige;
+  background-color: rgb(0, 0, 0);
 }
 
 #nav-part2 h4::after {
@@ -104,13 +106,15 @@ nav h4 {
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: black;
-  border-color: #dadada;
+  /* color: black; */
+  background-color: white;
+  border-color: #000000;
   left: 0;
   bottom: -100%;
   border-radius: 50%;
   transition: all ease 0.4s;
 }
+
 
 #nav-part2 h4:hover::after {
   bottom: 0;
@@ -119,7 +123,7 @@ nav h4 {
 
 #nav-part2 h4 a {
   font-family: nb;
-  color: #000000bb;
+  color: white;
   text-decoration: none;
   position: relative;
   z-index: 9;
@@ -129,9 +133,14 @@ nav h4 {
   border-color: #000000;
   background-color: #ff5f38;
 }
-
+#nav-part2 #menu a {
+  color: white;
+}
 #nav-part2 h4:hover a {
-  color: #fff;
+  color: black;
+}
+#nav-part2 #menu:hover a {
+  color: black;
 }
 
 #page1-content h1 {
@@ -272,6 +281,81 @@ nav h4 {
   margin-left: auto;
   margin-right: auto;
 }
+#page5 {
+  height: 100vh;
+  width: 100%;
+  background-color: black;
+  color: #dadada;
+  padding: 3vw 2.8vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+#page5 #top {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-bottom: 7vw;
+}
+#page5 #top #top-left h2 {
+  font-family: nb;
+  font-weight: 500;
+  padding-bottom: 1vw;
+}
+#page5 #top #top-left button {
+  margin-left: 0.2vw;
+  font-size: 1vw;
+  padding: 0.5vw;
+  border-radius: 0.5vw;
+  color: white;
+  background-color: black;
+  border: 0.2vw solid white;
+}
+#page5 #top #top-left button:hover {
+  background-color: white;
+  color: black;
+  transition: ease-in-out 0.3s;
+}
+#page5 #top-right {
+  font-size: 1.3vw;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+#page5 #top-right h3 {
+  padding-bottom: 0.1vw;
+  margin: 0.2vw;
+}
+#page5 #top-right h3 a {
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+  padding-bottom: 1vw;
+}
+#page5 #top-right h3:hover {
+  border-bottom: 0.2vw solid white;
+}
+#page5 #center {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 2vw;
+}
+#page5 #center h3 {
+  font-size: 1.3vw;
+  /* padding-left: 4vw; */
+}
+#page5 #bottom {
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+#page5 #bottom h1 {
+  font-size: 26vw;
+}
+#page5 #bottom h1 span {
+  user-select: none;
+  font-family: rejoy;
+}
 
 #loader {
   height: 100%;
@@ -294,3 +378,11 @@ nav h4 {
   background: linear-gradient(to right, orange, orangered);
   -webkit-background-clip: text;
 }
+
+/* .hidden{
+  opacity: 0;
+  transition:ease-in 2s;
+}
+.show{
+  opacity: 1;
+} */
