--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ nav h4 {
   position: relative;
   display: block;
   width: calc(100% + 1.3px);
-  height: 62px;
+  height: 70px;
 }
 
 .wave .shape-fill {
@@ -211,7 +211,7 @@ nav h4 {
 }
 .wave-2 {
   position: absolute;
-  top: 0;
+  top: -1px;
   left: 0;
   width: 100%;
   overflow: hidden;
@@ -222,7 +222,7 @@ nav h4 {
   position: relative;
   display: block;
   width: calc(100% + 1.3px);
-  height: 150px;
+  height: 140px;
 }
 
 .wave-2 .shape-fill {
@@ -232,6 +232,7 @@ nav h4 {
   min-height: 100vh;
   width: 100%;
   position: relative;
+  background-color: black;
   padding: 3vw;
 }
 #page3-top {
@@ -244,20 +245,22 @@ nav h4 {
   font-size: 1.5vw;
   font-weight: 500;
 }
+/* 
 #page3-top h4 span {
   font-size: 0.65vw;
   background-color: black;
   color: white;
   padding: 4px 10px;
   border-radius: 10px;
-}
+} */
 #page3-top h2 {
   user-select: none;
   padding-top: 1vw;
   display: inline-block;
   font-size: 5vw;
   font-weight: 570;
-  border-bottom: 0.3vw solid black;
+  color: white;
+  border-bottom: 0.3vw solid white;
 }
 #page3-top h2:hover {
   filter: contrast(200%);
@@ -265,6 +268,7 @@ nav h4 {
 #page3-content {
   width: 100%;
   height: 80vh;
+  min-height: 80vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -482,10 +486,3 @@ nav h4 {
   -webkit-background-clip: text;
 }
 
-/* .hidden{
-  opacity: 0;
-  transition:ease-in 2s;
-}
-.show{
-  opacity: 1;
-} */
