--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-40%, -30%); */
 }
 #cursor h5 {
   font-size: 1vw;
@@ -142,117 +142,37 @@ nav h4 {
 #nav-part2 #menu:hover a {
   color: black;
 }
-
 #page1-content h1 {
+  overflow: hidden;
   font-family: "rejoy";
-  font-size: 26.5vw;
+  font-size: 22.5vw;
   font-weight: 100;
-  line-height: 32vw;
+  line-height: 28vw;
 }
 #page1-content h1 span {
+  color: #faf8f3;
   display: inline-block;
   font-family: "rejoy";
 }
 
-.wave {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-  transform: rotate(180deg);
-}
-
-.wave svg {
-  position: relative;
-  display: block;
-  width: calc(100% + 1.3px);
-  height: 70px;
-}
-
-.wave .shape-fill {
-  fill: #faf8f3;
-}
-
-#page2 {
-  height: 110vh;
-  width: 100%;
-  background-color: #faf8f3;
-  position: relative;
-  padding: 5vw 2.8vw;
-  display: flex;
-  flex-direction: column;
-}
-#page2-top {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  padding-bottom: 1.2vw;
-  margin-bottom: 1vw;
-  /* border-bottom: 1px solid #00000092; */
-}
-#page2-top h3 {
-  font-size: 1.7vw;
-  font-weight: 500;
-  width: 26%;
-  /* background-color: red; */
-}
-#page2-top h4 {
-  font-size: 1.7vw;
-  font-weight: 500;
-}
-.elem {
-  overflow: hidden;
-}
-.elem h1 {
-  font-size: 4.2vw;
-  font-weight: 500;
-}
-.wave-2 {
-  position: absolute;
-  top: -1px;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-}
-
-.wave-2 svg {
-  position: relative;
-  display: block;
-  width: calc(100% + 1.3px);
-  height: 140px;
-}
-
-.wave-2 .shape-fill {
-  fill: #faf8f3;
-}
 #page3 {
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
   position: relative;
   background-color: black;
   padding: 3vw;
+  /* overflow: hidden; */
 }
 #page3-top {
   /* background-color: red; */
   text-align: center;
-  padding-bottom: 5vw;
+  padding-bottom: 1vw;
 }
 #page3-top h4 {
   margin-bottom: 1vw;
   font-size: 1.5vw;
   font-weight: 500;
 }
-/* 
-#page3-top h4 span {
-  font-size: 0.65vw;
-  background-color: black;
-  color: white;
-  padding: 4px 10px;
-  border-radius: 10px;
-} */
 #page3-top h2 {
   user-select: none;
   padding-top: 1vw;
@@ -275,7 +195,7 @@ nav h4 {
 }
 #page3-content #list-parking {
   width: 50%;
-  height: 100%;
+  height: 80%;
   background-color: #c0c0c0;
   margin: 1vw 2vw;
   border-radius: 10vw;
@@ -296,22 +216,21 @@ nav h4 {
   color: #000;
   font-size: 2.5rem;
 }
-#page3-content #list-parking #para h3{
+#page3-content #list-parking #para h3 {
   padding: 0.5vw 0vw;
 }
-#page3-content #list-parking button{
+#page3-content #list-parking button {
   border-radius: 2vw;
   font-size: 3vw;
   color: white;
-  background-color: #486C6E;
+  background-color: #486c6e;
   padding: 0.7vw 3vw;
   margin-bottom: 3.4vw;
 }
 
-
 #page3-content #find-parking {
   width: 50%;
-  height: 100%;
+  height: 80%;
   background-color: #c0c0c0;
   border-radius: 10vw;
   display: flex;
@@ -319,46 +238,77 @@ nav h4 {
   align-items: center;
   justify-content: space-around;
 }
-#find-parking h2{
+#find-parking h2 {
   font-size: 5vw;
   color: #000;
   font-family: poppins;
   font-style: oblique;
   border-bottom: 0.5vw solid #000;
 }
-#find-parking h3{
+#find-parking h3 {
   font-size: 4vw;
   /* margin-bottom:4vw; */
 }
-#find-parking #options{
+#find-parking #options {
   display: flex;
 }
-#find-parking #options button{
+#find-parking #options button {
   border-radius: 2vw;
   font-size: 2vw;
   color: white;
-  background-color: #486C6E;
+  background-color: #486c6e;
   margin: 2vw 0.8vw;
   padding: 0.7vw 3vw;
 }
 #page4 {
   height: 100vh;
   width: 100%;
-  padding: 4vw 0;
+  padding: 2vw 0;
   position: relative;
 }
-#page4 h1 {
-  font-size: 10vw;
+#page4 #page4-top {
+  max-height: 30vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 0.5vw;
+  /* margin-bottom: 1vw; */
+  /* border-bottom: 1px solid #00000092; */
+}
+#page4 #page4-top h1 {
+  font-size: 6vw;
   font-family: rejoy;
   font-weight: 100;
-  border-bottom: 1px solid #000000;
   width: 96%;
   margin-left: 2%;
 }
+#page4 #page4-top h3 {
+  text-wrap: pretty;
+  margin-right: 2%;
+  width: 100%;
+  font-size: 1.2vw;
+}
+.elem {
+  overflow: hidden;
+}
+.elem h1 {
+  font-size: 4.2vw;
+  font-weight: 500;
+  z-index: 99;
+}
+hr {
+  border: none;
+  height: 2px;
+  color: #000; /* old IE */
+  background-color: #000; /* Modern Browsers */
+  /* margin-bottom: 3vw; */
+}
 #swiperDiv {
-  height: 60vh;
+  height: 72vh;
   width: 100%;
   position: relative;
+  margin-top: 2vw;
+  user-select: none;
 }
 
 .swiper {
@@ -368,18 +318,16 @@ nav h4 {
 
 .swiper-slide {
   width: 400px;
-  text-align: center;
-  font-size: 18px;
   background: #fff;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: flex-end;
 }
 
 .swiper-slide img {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 23%;
+  /* height: 8/auto; */
   object-fit: cover;
 }
 
@@ -484,5 +432,5 @@ nav h4 {
   color: transparent;
   background: linear-gradient(to right, orange, orangered);
   -webkit-background-clip: text;
+  background-clip: text;
 }
-
